# arduino-compile-sketches

./: .gitattributes  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  cspell.config.yml  nurfile
.config/: cliff.toml  nextest.toml
.github/: common.nu
.github/workflows/: bump-n-release.nu  bump-n-release.yml  docs.yml  pre-commit.yml  rust.yml  self-test.yml
.zed/: settings.json
docs/: book.toml  gen_inputs.py
docs/src/: SUMMARY.md  inputs.md  introduction.md
src/: cli.rs  error.rs  lib.rs  logger.rs  main.rs  report.rs  serde_types.rs  utils.rs
src/driver/: compiler.rs  mod.rs  report.rs
src/driver/install/: libraries.rs  mod.rs  platforms.rs
tests/: adafruit_mcp23017.rs
tests/dep_fixtures/download-lib/: library.properties
tests/dep_fixtures/download-lib/src/: DownloadLib.h
tests/dep_fixtures/path-lib/: library.properties
tests/dep_fixtures/path-lib/src/: PathLib.h
tests/installed_platforms/: core-list.json
