[package]
name = "arduino-compile-sketches"
version = "0.1.0"
description = "A CLI tool for compiling Arduino sketches and generating reports."
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive", "env"], optional = true }
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "system-proxy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tar = "0.4"
flate2 = "1.1"
zip = { version = "8.6.0", features = ["deflate-flate2"] }
tempfile = "3.27"
serde-saphyr = "0.0.26"
arduino-report-size-deltas = "1.1.0"
log = "0.4"
url = "2.5.8"
directories = "6.0.0"
thiserror = "2.0.18"
colored = { version = "3.1.1", optional = true }

[dev-dependencies]
mockito = "1.7.2"

[features]
default = []
bin = ["clap", "reqwest/native-tls", "colored"]
clap = ["dep:clap"]
colored = ["dep:colored"]
openssl = ["reqwest/native-tls-vendored"]

[[bin]]
name = "arduino-compile-sketches"
path = "src/main.rs"
required-features = ["bin"]
